# steprs-dev

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  OPEN_CORE.md  README.md  SCORECARD.md  llm.json  package-lock.json  package.json  turbo.json
crates/steprs-core/: Cargo.toml
crates/steprs-core/examples/: batch_parse.rs  dump_fixture_handoff.rs  generate_schema.rs  golden_calibrate.rs  golden_inspect.rs  golden_report.rs  nist_htc_calibrate.rs  parse_step.rs
crates/steprs-core/src/: error.rs  golden.rs  lib.rs
crates/steprs-core/src/arena/: mod.rs
crates/steprs-core/src/core/: mod.rs
crates/steprs-core/src/entity/: mod.rs
crates/steprs-core/src/features/: aag.rs  geometry.rs  labels.rs  mesh.rs  mod.rs  pmi.rs  quoting.rs  units.rs
crates/steprs-core/src/kernel/: mod.rs  step_faces.rs
crates/steprs-core/src/output/: mod.rs
crates/steprs-core/src/parser/: mod.rs  prescan.rs  scan.rs
crates/steprs-core/src/pipeline/: mod.rs
crates/steprs-core/src/resolver/: aag_edges.rs  mod.rs
crates/steprs-core/src/topology/: mod.rs
crates/steprs-core/src/wasm/: mod.rs  wire.rs
crates/steprs-core/tests/: batch_test.rs  benchy_hole_debug.rs  bore_confirmation_audit.rs  golden_suite.rs  integration_test.rs
crates/steprs-core/tests/fixtures/: simple_cube.step
crates/steprs-core/tests/fixtures/golden/: manifest.json
crates/steprs-core/tests/fixtures/nist/: README.md
crates/steprs-core/tests/fixtures/nist_htc/: manifest.json  nist_htc_geometry.stp
crates/steprs-core/tests/fixtures/prismatic/: 00002261_ee36ce2e0fc6420195435501_step_004.step  (+11 more)
(+222 files in other folders)
